--- a/app/R1.md
+++ b/app/R1.md
@@ -1,8 +1,16 @@
 ---
 itemId: rq-1
 itemType: Requirement
+itemHasParent: KDG-4
 ---
 
-# RQ1
+# Patient app UI (Android)
 
-## RQ1 description
+In the patient Android app, patients will be able to:
+
+* Review their dosage history
+* Message their provider
+* Provide dosage instructions to the infusion pump
+* Read sensory readings from their glucose monitor
+* View the version of the infusion pump being used
+* See prescriptions from the provider
